--- a/pom.xml
+++ b/pom.xml
@@ -11,4 +11,23 @@
         <maven.compiler.target>19</maven.compiler.target>
         <exec.mainClass>principal.Simulacion</exec.mainClass>
     </properties>
+    
+    <!-- se agrega la dependencia -->
+    <dependencies>
+        <dependency>
+            <groupId>org.seleniumhq.selenium</groupId>
+            <artifactId>selenium-java</artifactId>
+            <version>4.4.0</version>
+        </dependency>
+        
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.12</version>
+            <scope>test</scope>
+            <type>jar</type>
+        </dependency>
+    </dependencies>
+    
+    
 </project>
